preparation for CSV-based PIDs and conversion